Header part 3 (finished), translations added, CSS improvements

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,123 @@
 {
-    "missionLevel": "Mission Level",
+    "mission-level": "Mission Level",
     "monster": "Monster",
-    "details": "Details"
+    "details": "Details",
+    "language": "Language",
+    "default-kingdom": "Default Kingdom",
+    "map": "Map",
+    "level": "Level",
+    "rank": "Class",
+    "spawns": "Spawns",
+    "bonuses": "Bonuses",
+    "cung-mok": "Cung-Mok",
+    "jug-hyul": "Jug-Hyul",
+    "mu-rang": "Mu-Rang",
+    "young-ji": "Young-Ji",
+    "mi-jung": "Mi-Jung",
+    "li-an": "Li-An",
+    "se-rang": "Se-Rang",
+    "lykos": "Lykos",
+    "rock-ape": "Rock Ape",
+    "scrofa": "Scrofa",
+    "jin-hee": "Jin-Hee",
+    "bera": "Bera",
+    "tigris": "Tigris",
+    "black-storm-soldier": "Black Storm Soldier",
+    "mahon": "Mahon",
+    "black-storm-maniac": "Black Storm Maniac",
+    "black-storm-archer": "Black Storm Archer",
+    "black-storm-joh-hwan": "Black Storm Joh-Hwan",
+    "bo": "Bo",
+    "black-storm-kyuk-jang": "Black Storm Kyuk-Jang",
+    "goo-pae": "Goo-Pae",
+    "black-storm-pho-hwan": "Black Storm Pho-Hwan",
+    "bestial-captain": "Bestial Captain",
+    "chuong": "Chuong",
+    "bestial-archer": "Bestial Archer",
+    "bestial-specialist": "Bestial Specialist",
+    "walking-ape": "Walking Ape",
+    "chief-orc": "Chief Orc",
+    "dark-leader": "Dark Leader",
+    "ape-lord": "Ape Lord",
+    "giant-tortoise": "Giant Tortoise",
+    "nine-tails": "Nine Tails",
+    "flame-king": "Flame King",
+    "yellow-tiger-ghost": "Yellow Tiger Ghost",
+    "demon-king": "Demon King",
+    "death-reaper": "Death Reaper",
+    "spider-baroness": "Spider Baroness",
+    "setaou-hunter": "Setaou Hunter",
+    "giant-ghost-tree": "Giant Ghost Tree",
+    "mighty-ice-witch": "Mighty Ice Witch",
+    "charon": "Charon",
+    "general-yonghan": "General Yonghan",
+    "skeletos": "Skeletos",
+    "the-great-ogre": "The Great Ogre",
+    "triton": "Triton",
+    "red-chief": "Red Chief",
+    "martyaxwar": "Martyaxwar",
+    "en-tai-guardian": "En-Tai Guardian",
+    "supreme-gnoll-lord": "Supreme Gnoll Lord",
+    "polyphemos": "Polyphemos",
+    "ochao-bodyguard": "Ochao Bodyguard",
+    "king-wubba": "King Wubba",
+    "brutal-red-chief": "Brutal Red Chief",
+    "joan": "Joan",
+    "pyungmoo": "Pyungmoo",
+    "yongan": "Yongan",
+    "bokjung": "Bokjung",
+    "bakra": "Bakra",
+    "yayang": "Yayang",
+    "hasun-dong": "Hasun Dong",
+    "jungsun-dong": "Jungsun Dong",
+    "sangsun-dong": "Sangsun Dong",
+    "valley-of-seungryong": "Valley of Seungryong",
+    "hwang-temple": "Hwang Temple",
+    "yongbi-desert": "Yongbi Desert",
+    "mount-sohan": "Mount Sohan",
+    "fireland": "Fireland",
+    "demon-tower": "Demon Tower",
+    "spider-queen's-nest": "Spider Queen's Nest",
+    "grotto-of-exile": "Grotto of Exile",
+    "grotto-of-exile-v2": "Grotto of Exile V2",
+    "red-wood": "Red Wood",
+    "devil's-catacomb": "Devil's Catacomb",
+    "gautama-cliff": "Gautama Cliff",
+    "nephrite-bay": "Nephrite Bay",
+    "cape-dragon-fire": "Cape Dragon Fire",
+    "temple-of-the-ochao": "Temple of the Ochao",
+    "thunder-mountains": "Thunder Mountains",
+    "strong-against-animals": "Strong against Animals",
+    "strong-against-half-humans": "Strong against Half Humans",
+    "resistance-to-half-humans": "Resistance to Half Humans",
+    "magic-resistance": "Magic Resistance",
+    "arrow-defence": "Arrow Defence",
+    "strong-against-orcs": "Strong against Orcs",
+    "strong-against-mystics": "Strong against Mystics",
+    "strong-against-desert-monsters": "Strong against Desert Monsters",
+    "strong-against-undead": "Strong against Undead",
+    "strong-against-insects": "Strong against Insects",
+    "strong-against-devils": "Strong against Devils",
+    "power-of-wind": "Power of Wind",
+    "power-of-fire": "Power of Fire",
+    "power-of-lightning": "Power of Lightning",
+    "power-of-ice": "Power of Ice",
+    "power-of-earth": "Power of Earth",
+    "power-of-dark": "Power of Dark",
+    "wind-resistance": "Wind Resistance",
+    "fire-resistance": "Fire Resistance",
+    "lightning-resistance": "Lightning Resistance",
+    "ice-resistance": "Ice Resistance",
+    "earth-resistance": "Earth Resistance",
+    "dark-resistance": "Dark Resistance",
+    "element-of-wind": "Elemet of Wind",
+    "element-of-fire": "Elemet of Fire",
+    "element-of-lightning": "Elemet of Lightning",
+    "element-of-ice": "Elemet of Ice",
+    "element-of-earth": "Elemet of Earth",
+    "element-of-dark": "Elemet of Dark",
+    "element-none": "No element",
+    "n/a": "N/A",
+    "open-world-collection": "Open World Collection",
+    "dungeon-collection": "Dungeon Collection"
 }
