--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -1,5 +1,97 @@
 {
-    "missionLevel": "Poziom Misji",
+    "mission-level": "Poziom misji",
     "monster": "Potwór",
-    "details": "Szczegóły"
+    "details": "Szczegóły",
+    "language": "Język",
+    "default-kingdom": "Domyślne królestwo",
+    "map": "Mapa",
+    "level": "Poziom",
+    "rank": "Stopień",
+    "spawns": "Występowanie",
+    "bonuses": "Bonusy",
+    "rock-ape": "Skalista Małpa",
+    "black-storm-soldier": "Żołnierz Czarn. Burzy",
+    "black-storm-maniac": "Maniak Czarn. Burzy",
+    "black-storm-archer": "Łucznik Czarn. Burzy",
+    "black-storm-joh-hwan": "Joh-Hwan Czarn. Burzy",
+    "black-storm-kyuk-jang": "Kyuk-Jang Czarn. Burzy",
+    "black-storm-pho-hwan": "Pho-Hwan Czarn. Burzy",
+    "bestial-captain": "Best. Kapitan",
+    "bestial-archer": "Bestialski Łucznik",
+    "bestial-specialist": "Best. Specjalista",
+    "walking-ape": "Chodząca Małpa",
+    "chief-orc": "Wódz Orków",
+    "dark-leader": "Ezot. Przyw.",
+    "ape-lord": "Lord Małp",
+    "giant-tortoise": "Olbrzymi Żółw",
+    "nine-tails": "Dziewięć Ogonów",
+    "flame-king": "Ognisty Król",
+    "yellow-tiger-ghost": "Zjawa Żółtego Tygrysa",
+    "demon-king": "Król Demonów",
+    "death-reaper": "Umarły Rozpruwacz",
+    "spider-baroness": "Baronówna Pająków",
+    "setaou-hunter": "Łowca Setaou",
+    "giant-ghost-tree": "Olbrzymie Drzewo Duchów",
+    "mighty-ice-witch": "Silna Lodowa Wiedźma",
+    "general-yonghan": "Generał Yonghan",
+    "skeletos": "Szkieletor",
+    "the-great-ogre": "Ogr Maximus",
+    "triton": "Tryton",
+    "red-chief": "Czerwony Wódz",
+    "en-tai-guardian": "Strażnik En-Tai",
+    "supreme-gnoll-lord": "Główny Gnoll Strażnik",
+    "polyphemos": "Polifem",
+    "ochao-bodyguard": "Goryl Ochao",
+    "king-wubba": "Król Wobba",
+    "brutal-red-chief": "Brutalny Czerwony Wódz",
+    "yayang": "Jayang",
+    "valley-of-seungryong": "Dolina Seungryong",
+    "hwang-temple": "Świątynia Hwang",
+    "yongbi-desert": "Pustynia Yongbi",
+    "mount-sohan": "Góra Sohan",
+    "fireland": "Doyyumhwan",
+    "demon-tower": "Wieża Demonów",
+    "spider-queen's-nest": "Kryjówka Baronówny Pająków",
+    "grotto-of-exile": "Grota Wygnańców",
+    "grotto-of-exile-v2": "Grota Wygnańców 2",
+    "red-wood": "Czerwony Las",
+    "devil's-catacomb": "Piekielne Katakumby",
+    "gautama-cliff": "Klif Gautama",
+    "nephrite-bay": "Nefrytowa Zatoka",
+    "cape-dragon-fire": "Przylądek Smoczego Ognia",
+    "temple-of-the-ochao": "Świątynia Ochao",
+    "thunder-mountains": "Gromiste Góry",
+    "strong-against-animals": "Silny przeciwko Zwierzętom",
+    "strong-against-half-humans": "Siła w walce z półludźmi",
+    "resistance-to-half-humans": "Odporność na półludzi",
+    "magic-resistance": "Odporność na Magię",
+    "arrow-defence": "Odporność na Strzały",
+    "strong-against-orcs": "Silny przeciwko Orkom",
+    "strong-against-mystics": "Silny przeciwko Mistykom",
+    "strong-against-desert-monsters": "Siła w walce z potworami pustyni",
+    "strong-against-undead": "Silny przeciwko Nieumarłym",
+    "strong-against-insects": "Siła w walce z insektami",
+    "strong-against-devils": "Siła w walce z diabłami",
+    "power-of-wind": "Siła Wiatru",
+    "power-of-fire": "Siła Ognia",
+    "power-of-lightning": "Siła Błyskawic",
+    "power-of-ice": "Siła Lodu",
+    "power-of-earth": "Siła Ziemi",
+    "power-of-dark": "Siła Mroku",
+    "wind-resistance": "Odporność na Wiatr",
+    "fire-resistance": "Odporność na Ogień",
+    "lightning-resistance": "Odporność na Błyskawice",
+    "ice-resistance": "Odporność na Lód",
+    "earth-resistance": "Odporność na Ziemię",
+    "dark-resistance": "Odporność na Mrok",
+    "element-of-wind": "Żywioł Wiatru",
+    "element-of-fire": "Żywioł Ognia",
+    "element-of-lightning": "Żywioł Błyskawicy",
+    "element-of-ice": "Żywioł Lodu",
+    "element-of-earth": "Żywioł Ziemi",
+    "element-of-dark": "Żywioł Mroku",
+    "element-none": "Brak żywiołu",
+    "n/a": "—",
+    "open-world-collection": "Kolekcja otwartego świata",
+    "dungeon-collection": "Kolekcja lochów"
 }
