Turkish translation, spawn fixes

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -110,12 +110,12 @@
     "ice-resistance": "Ice Resistance",
     "earth-resistance": "Earth Resistance",
     "dark-resistance": "Dark Resistance",
-    "element-of-wind": "Elemet of Wind",
-    "element-of-fire": "Elemet of Fire",
-    "element-of-lightning": "Elemet of Lightning",
-    "element-of-ice": "Elemet of Ice",
-    "element-of-earth": "Elemet of Earth",
-    "element-of-dark": "Elemet of Dark",
+    "element-of-wind": "Element of Wind",
+    "element-of-fire": "Element of Fire",
+    "element-of-lightning": "Element of Lightning",
+    "element-of-ice": "Element of Ice",
+    "element-of-earth": "Element of Earth",
+    "element-of-dark": "Element of Dark",
     "element-none": "No element",
     "n/a": "N/A",
     "open-world-collection": "Open World Collection",
