--- a/src/locales/tr/translation.json
+++ b/src/locales/tr/translation.json
@@ -11,8 +11,8 @@
     "bonuses": "Bonuslar",
     "rock-ape": "Kaya Maymun",
     "black-storm-soldier": "Siyah Fırtına Askeri",
-    "black-storm-maniac": "Black Storm Maniac",
-    "black-storm-archer": "Black Storm Archer",
+    "black-storm-maniac": "Siyah Fırtına Delisi",
+    "black-storm-archer": "Siyah Fırtına Okçusu",
     "black-storm-joh-hwan": "Siyah Fırtına Joh-Hwan",
     "black-storm-kyuk-jang": "Siyah Fırtına Kyuk-Jan",
     "black-storm-pho-hwan": "Siyah Fırtına Pho-Hwan",
