--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -119,5 +119,14 @@
     "element-none": "No element",
     "n/a": "N/A",
     "open-world-collection": "Open World Collection",
-    "dungeon-collection": "Dungeon Collection"
+    "dungeon-collection": "Dungeon Collection",
+    "chunjo": "Chunjo",
+    "jinno": "Jinno",
+    "shinsoo": "Shinsoo",
+    "1": "1",
+    "2": "2",
+    "3": "3",
+    "4": "4",
+    "5": "5",
+    "BOSS": "BOSS"
 }
